# mgrs

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  README.txt  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml
ci/: build-wheel-linux.sh  build-wheel-osx.sh  build-wheel.bat  test-wheel-linux.sh  test-wheel-osx.sh  test-wheel.bat
libmgrs/: mgrs.c  mgrs.h  polarst.c  tranmerc.c  ups.c  utm.c
mgrs/: __init__.py  core.py
tests/: __init__.py  test.txt  test_doctests.py
